Fixed container one and two overlap, added content to both; finished container 3

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-body {
+body, html {
     display:flex;
     flex-direction: column;
     margin: 0;
+    flex: 1;
+    width: 100%;
+    height: 100%;
 }
 
 .header {
@@ -36,6 +39,7 @@ a {
     padding: 30px;
     background-color: #443f3f;
     gap: 70px;
+    flex: 1 1 auto;
 }
 
 .c1-content {
@@ -80,6 +84,7 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex: 1 1 auto;
 }
 
 .c2-title {
@@ -90,22 +95,24 @@ img {
     padding: 20px;
 }
 
+
 .c2-image-container {
     display:flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding: 10px;
     
 }
 
 .c2-image {
     width: 200px;
-    max-height: 130px;
     text-align: center;
+    display:flex;
 }
 
 .little-image {
-    max-width: 150px;
+    width: 150px;
     border: 3px solid #3882f6;
     border-radius: 11px;
 }
@@ -113,4 +120,29 @@ img {
 .c2-link {
     color: #312e2e;
     text-decoration: none;
+}
+
+.third-container {
+    display:flex;
+    background-color: beige;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex: 1 1 auto;
+}
+
+.c1-container {
+    display:flex;
+    flex-direction: column;
+}
+
+.c3-text {
+    font-size: 36px;
+    font-weight: lighter;
+    font-style:italic;
+    color: #1f2937;
+}
+
+.c3-autor {
+    align-self: flex-end;
 }
